tdf#107795 fixed cursor position after inserting input field

Change-Id: I3c063c0393b524132e522914a7a9885c8a9c3b78
Reviewed-on: https://gerrit.libreoffice.org/37536
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 408a7e320db978a8f784fa25e35caedf931612c5)
Reviewed-on: https://gerrit.libreoffice.org/38443
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 48e75d8107d64920dd90c5d98b79dc982e311fa3)